--- a/index.html
+++ b/index.html
@@ -1831,15 +1831,15 @@
               data-aos-delay="200"
             >
               <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Vehicle Spare Parts Management System.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>ART ZONE mobile application</h4>
+                  <h4>Vehicle Spare Parts Management System</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="https://i9.ytimg.com/vi/eMMsD80Jm-w/maxresdefault.jpg?v=637c92eb&sqp=CNjRv7oG&rs=AOn4CLC5oY0fZk_HGgjFFBrE_UrioG5LDA"
@@ -1859,10 +1859,38 @@
               <!-- End Portfolio Item -->
 
               <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+              >
+                <img
+                  src="/assets//img/proj/ART ZONE mobile application.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>ART ZONE mobile application</h4>
+                  <p>Lorem ipsum, dolor sit</p>
+                  <a
+                    href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg"
+                    title="Product 1"
+                    data-gallery="portfolio-gallery-product"
+                    class="glightbox preview-link"
+                    ><i class="bi bi-zoom-in"></i
+                  ></a>
+                  <a
+                    href="portfolio-details.html"
+                    title="More Details"
+                    class="details-link"
+                    ><i class="bi bi-link-45deg"></i
+                  ></a>
+                </div>
+              </div>
+              <!-- End Portfolio Item -->
+
+              <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Pharmacy prescription management system.jpg"
                   class="img-fluid"
                   alt=""
                 />
@@ -1890,40 +1918,12 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/AUTOWAG - Vehile Rental System.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Vehicle Spare Parts Management System</h4>
-                  <p>Lorem ipsum, dolor sit</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg"
-                    title="Product 1"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-
-              <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
-              >
-                <img
-                  src="/assets//img/proj/maxresdefault.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>Calm Down Music Player</h4>
+                  <h4>AUTOWAG - Vehile Rental System</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg"
@@ -1946,12 +1946,12 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Calm Down Music Player.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Simple Portfolio</h4>
+                  <h4>Calm Down Music Player</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg"
@@ -1971,15 +1971,15 @@
               <!-- End Portfolio Item -->
 
               <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Simple Portfolio.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>JAVA mobile application 2</h4>
+                  <h4>Simple Portfolio</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg"
@@ -1999,15 +1999,15 @@
               <!-- End Portfolio Item -->
 
               <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/JAVA mobile application 2.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>CITIZEN Connect</h4>
+                  <h4>JAVA mobile application 2</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg"
@@ -2027,15 +2027,15 @@
               <!-- End Portfolio Item -->
 
               <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/CITIZEN Connect.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 3</h4>
+                  <h4>CITIZEN Connect</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg"
@@ -2058,12 +2058,12 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/maxresdefaufdgdfglt.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Product 3</h4>
+                  <h4>Microservice Architecture | MERN Stack Group Project</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg"
@@ -2086,12 +2086,12 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/NEXT JS Portfolio.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Branding 3</h4>
+                  <h4>NEXT JS Portfolio</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
@@ -2114,12 +2114,12 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding filter-app"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Virtual Dressing Room.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Branding 3</h4>
+                  <h4>Virtual Dressing Room</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
@@ -2139,15 +2139,45 @@
               <!-- End Portfolio Item -->
 
               <div
+              class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding filter-branding"
+            >
+              <img
+                src="/assets//img/proj/Virtual Dressing Room.png"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="portfolio-info">
+                <h4>Virtual Dressing Room web app</h4>
+                <p>Lorem ipsum, dolor sit</p>
+                <a
+                  href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
+                  title="Branding 2"
+                  data-gallery="portfolio-gallery-branding"
+                  class="glightbox preview-link"
+                  ><i class="bi bi-zoom-in"></i
+                ></a>
+                <a
+                  href="portfolio-details.html"
+                  title="More Details"
+                  class="details-link"
+                  ><i class="bi bi-link-45deg"></i
+                ></a>
+              </div>
+            </div>
+            <!-- End Portfolio Item -->
+
+
+
+              <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Mobile POS system.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Branding 3</h4>
+                  <h4>Mobile POS system</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
@@ -2169,12 +2199,39 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Movie Rental System .NET.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Branding 3</h4>
+                  <h4>Movie Rental System .NET</h4>
+                  <p>Lorem ipsum, dolor sit</p>
+                  <a
+                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
+                    title="Branding 2"
+                    data-gallery="portfolio-gallery-branding"
+                    class="glightbox preview-link"
+                    ><i class="bi bi-zoom-in"></i
+                  ></a>
+                  <a
+                    href="portfolio-details.html"
+                    title="More Details"
+                    class="details-link"
+                    ><i class="bi bi-link-45deg"></i
+                  ></a>
+                </div>
+              </div>
+              <!-- End Portfolio Item -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
+              >
+                <img
+                  src="/assets//img/proj/Simple CRUD iOS App with SwiftUI and Core Data.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Simple CRUD iOS App with SwiftUI and Core Data</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
@@ -2196,12 +2253,12 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
               >
                 <img
-                  src="/assets//img/proj/maxresdefault.png"
+                  src="/assets//img/proj/Marker-based AR Dinosaur Application.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Branding 3</h4>
+                  <h4>Marker-based AR Dinosaur Application</h4>
                   <p>Lorem ipsum, dolor sit</p>
                   <a
                     href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
@@ -2219,33 +2276,74 @@
                 </div>
               </div>
               <!-- End Portfolio Item -->
+
+
+
+
+
+
+
+
+
+
+
               <div
-                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
-              >
-                <img
-                  src="/assets//img/proj/maxresdefault.png"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-info">
-                  <h4>Branding 3</h4>
-                  <p>Lorem ipsum, dolor sit</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
+              class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+            >
+              <img
+                src="/assets//img/proj/maxresdfwfssdfdefault.jpg"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="portfolio-info">
+                <h4>Swift UI</h4>
+                <p>Lorem ipsum, dolor sit</p>
+                <a
+                  href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
+                  title="Branding 2"
+                  data-gallery="portfolio-gallery-branding"
+                  class="glightbox preview-link"
+                  ><i class="bi bi-zoom-in"></i
+                ></a>
+                <a
+                  href="portfolio-details.html"
+                  title="More Details"
+                  class="details-link"
+                  ><i class="bi bi-link-45deg"></i
+                ></a>
               </div>
-              <!-- End Portfolio Item -->
+            </div>
+            <!-- End Portfolio Item -->
+            <div
+            class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+          >
+            <img
+              src="/assets//img/proj/w0x3wktS5_0-HD.jpg"
+              class="img-fluid"
+              alt=""
+            />
+            <div class="portfolio-info">
+              <h4>Branding 3</h4>
+              <p>Lorem ipsum, dolor sit</p>
+              <a
+                href="assets/img/masonry-portfolio/w0x3wktS5_0-HD.jpg"
+                title="Branding 2"
+                data-gallery="portfolio-gallery-branding"
+                class="glightbox preview-link"
+                ><i class="bi bi-zoom-in"></i
+              ></a>
+              <a
+                href="portfolio-details.html"
+                title="More Details"
+                class="details-link"
+                ><i class="bi bi-link-45deg"></i
+              ></a>
+            </div>
+          </div>
+          <!-- End Portfolio Item -->
+
+
+             
             </div>
             <!-- End Portfolio Container -->
           </div>
@@ -2292,7 +2390,7 @@
                   </svg>
                   <i class="bi bi-phone"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="service-details.html" class="stretched-link">
                   <h3>Mobile App Development</h3>
                 </a>
                 <p>
@@ -2362,7 +2460,7 @@
                   </svg>
                   <i class="bi bi-palette"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="service-details.html" class="stretched-link">
                   <h3>UI/UX Design</h3>
                 </a>
                 <p>
@@ -2397,7 +2495,7 @@
                   </svg>
                   <i class="bi bi-cloud-upload"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="service-details.html" class="stretched-link">
                   <h3>Cloud & DevOps</h3>
                 </a>
                 <p>
@@ -2432,7 +2530,7 @@
                   </svg>
                   <i class="bi bi-robot"></i>
                 </div>
-                <a href="#" class="stretched-link">
+                <a href="service-details.html" class="stretched-link">
                   <h3>Emerging Technologies</h3>
                 </a>
                 <p>
@@ -2474,7 +2572,7 @@
                   Developing tailored software solutions across multiple
                   programming languages and frameworks. Expertise in Java,
                   Python
-                  <a href="#" class="stretched-link"></a>
+                  <a href="service-details.html" class="stretched-link"></a>
                 </p>
               </div>
             </div>
@@ -2610,8 +2708,7 @@
       <div class="container">
         <h3 class="sitename">Thushan Vithana</h3>
         <p>
-          Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni
-          eligendi fuga maxime saepe commodi placeat.
+          Software Engineering student with robust design and analytical skills. 
         </p>
         <div class="social-links d-flex justify-content-center">
           <a href=""><i class="bi bi-twitter-x"></i></a>
